fix navigation mobile issue

--- a/wp-content/themes/DHLGuideSA/style/_header.scss
+++ b/wp-content/themes/DHLGuideSA/style/_header.scss
@@ -346,6 +346,14 @@ body {
             }
 
             ul.navbar-nav {
+              .menu-item {
+                &.open {
+                  .dropdown-menu {
+                    overflow: hidden;
+                  }
+
+                }
+              }
 
               @include desktop {
                 .menu-item {
